products/core/kyverno/templates/policies/prevent-no-probes.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-pod-probes
  annotations:
    policies.kyverno.io/title: Prevent no Pod Probes
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/description: >-
      Liveness and readiness probes need to be configured to correctly manage a Pod's
      lifecycle during deployments, restarts, and upgrades. For each Pod, a periodic
      `livenessProbe` is performed by the kubelet to determine if the Pod's containers
      are running or need to be restarted. A `readinessProbe` is used by Services
      and Deployments to determine if the Pod is ready to receive network traffic.
      This policy validates that all containers have one of livenessProbe, readinessProbe,
      or startupProbe defined.
spec:
  validationFailureAction: Audit
  rules:
  - name: validate-probes
    match:
      any:
      - resources:
          kinds:
          - Pod
          operations:
          - CREATE
          - UPDATE
    validate:
      cel:
        expressions:
          - expression: >-
              object.spec.containers.all(container,
              has(container.livenessProbe) ||
              has(container.startupProbe) ||
              has(container.readinessProbe))
            message: "Liveness, readiness, or startup probes are required for all containers."
